<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note Keep</string>
    <string name="action_settings">Settings</string>
    <string name="note_title_hint">Текст</string>
    <string name="note_title_label">Заголовок</string>
	<string name="note_details_label">Детали</string>
	<string name="note_details_labe2">Установите дату</string>
	<string name="note_details_labe3">и время дедлайна</string>
	<string name="note_details_labe4">Последнее изменение:</string>
	<string name="notes_title">Заметки</string>
	<string name="date_picker_title">Дата дедлайна:</string>
    <string name="time_picker_title">Время дедлайна:</string>
    <string name="new_note">Новая заметка</string>
	<string name="delete_note">Удалить заметку</string>
	<string name="export_note">Поделиться заметкой</string>
	<string name="help_string">Добавить заметку</string>
	<string name="action_done_label">Выполнено! </string>
	<string name="alarm_string">Напомнить мне! </string>
	<string name="action_startnotif">Вкл. напоминание</string>
	<string name="action_stopnotif">Откл. напоминание</string>
	<string name="camera_button_text">OK</string>
	<string name="new_picture">Добавить фото</string>
	<string name="note_export_subject">NoteKeep Note Export</string>
	<string name="note_report_done">Дело сделано</string>
	<string name="note_report_undone">Дело еще не сделано</string>
	
	<string name="note_report">%1$s!
		Заметка была сделана в %2$s. %3$s
	</string>
	<string name="send_note">Отправить заметку через</string>
</resources>
