<?xml version="1.0" encoding="utf-8"?>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="#F8F4FF"
	>

	<TextView
	    style="@style/BigTextStyle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/note_title_label"
	    android:textStyle="bold|italic"
	    android:typeface="normal" />
	
	<EditText
	    android:id="@+id/note_title"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:hint="@string/note_title_hint"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    android:textColor="#798081"
	    android:textStyle="italic" />
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/note_details_label"	
		android:textStyle="bold|italic"
		android:paddingLeft="20dp"
		style="@style/BigTextStyle"
	/>
	
<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="#F8F4FF"
	>	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="20dp"
	    android:layout_weight="1"
	    android:textSize="14sp"
	    android:text="@string/note_details_labe2"
	    android:textColor="#798081"
	    android:textStyle="italic" />

	<Button
	    android:id="@+id/note_date"
	    android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="text"
	    android:paddingLeft="20dp"
	    android:minHeight="20dp"
	    android:textSize="14sp"
	    android:textStyle="italic"
	    android:textColor="#798081"
	    android:background="#F8F4FF"
	    android:visibility="visible" />
	
	  
       </LinearLayout>
       
<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="#F8F4FF"
	>	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="20dp"
	    android:layout_weight="1"
	    android:textSize="14sp"
	    android:text="@string/note_details_labe3"
	    android:textColor="#798081"
	    android:textStyle="italic" />

	<Button
	    android:id="@+id/note_time"
	    android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="text"
	    android:paddingLeft="20dp"
	    android:minHeight="20dp"
	    android:textSize="14sp"
	    android:textStyle="italic"
	    android:textColor="#798081"
	    android:background="#F8F4FF"
	    android:visibility="visible"
	     />
	
	  
       </LinearLayout>
 
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textStyle="italic"
        android:paddingTop="80dp"
		android:paddingLeft="20dp"
		android:textSize="12sp"
		android:text="Последнее обновление"
		style="@style/BigTextStyle"
	/>
	

</LinearLayout>
